--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_basic_operations_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_basic_operations_en.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "OFAC7k325rTj"
+      },
       "source": [
         "# Basic Matrix Operations\n",
         "\n",
@@ -21,8 +23,8 @@
         "\n",
         "### Example 1\n",
         "\n",
-        "Let $A=\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}$ and $B=\\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\end{bmatrix}$. \n",
-        "Then the sum of matrices $A$ and $B$ is \n",
+        "Let $A=\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}$ and $B=\\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\end{bmatrix}$.\n",
+        "Then the sum of matrices $A$ and $B$ is\n",
         "\n",
         "$$\n",
         "C=\n",
@@ -42,9 +44,9 @@
         "\n",
         "### Example 3\n",
         "\n",
-        "Let \n",
-        "$A=\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}$ \n",
-        "and \n",
+        "Let\n",
+        "$A=\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}$\n",
+        "and\n",
         "$B=\\begin{bmatrix} 5 & 6 \\\\ 7 & 8 \\end{bmatrix}$.\n",
         "\n",
         "Then the product of matrices $A$ and $B$ is\n",
@@ -57,9 +59,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "_xWtqUA15rTo",
+        "outputId": "4dc2fd44-d6b7-40ae-cb33-6e9bb1ce54a7"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1, 2],\n",
+              "[3, 4]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2\\\\3 & 4\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "# Example 1: Matrix addition in sympy\n",
         "import sympy as sp\n",
@@ -71,27 +94,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "Efzrior55rTs",
+        "outputId": "31b419aa-17fc-4417-f878-d8b032268bd0"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[5, 6],\n",
+              "[7, 8]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 6\\\\7 & 8\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "B # display matrix B"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bd1KrVYV5rTt",
+        "outputId": "af1edb8b-968f-485e-a0af-b9af5d17f998"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
       "source": [
         "sp.Matrix([[6,8],[10,12]])==A+B # verify matrix addition"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MePBgLKE5rTu",
+        "outputId": "2d4da99f-515d-403d-b21b-9473df90b53f"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
         "# Example 2: Scalar multiplication\n",
         "A=sp.Matrix([[1,2],[3,4]]) # define matrix A\n",
@@ -102,7 +180,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "8R01_2Q55rTv"
+      },
       "outputs": [],
       "source": [
         "# Example 3: Multiplication of two matrices\n",
@@ -115,13 +195,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "o5Zr0crw5rTw"
+      },
       "source": [
         "### Necessary Condition for Matrix Multiplication\n",
         "\n",
         "Remember that matrices can have different numbers of rows and columns.\n",
         "\n",
-        "To multiply two matrices $A_{m \\times n}$ and $B_{n \\times k}$, where $A$ has dimensions $m \\times n$ and $B$ has dimensions $n \\times k$, the number of columns of matrix $A$ must equal the number of rows of matrix $B$. Otherwise, matrix multiplication is not possible. \n",
+        "To multiply two matrices $A_{m \\times n}$ and $B_{n \\times k}$, where $A$ has dimensions $m \\times n$ and $B$ has dimensions $n \\times k$, the number of columns of matrix $A$ must equal the number of rows of matrix $B$. Otherwise, matrix multiplication is not possible.\n",
         "\n",
         "$$\n",
         "A_{m \\times n} \\cdot B_{n \\times k} = C_{m \\times k}\n",
@@ -138,9 +220,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 35,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        },
+        "id": "rwbssH1Y5rTx",
+        "outputId": "eece7dd6-fc15-4d6f-a496-485b1c74af35"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[ 9, 12, 15],\n",
+              "[19, 26, 33],\n",
+              "[29, 40, 51]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}9 & 12 & 15\\\\19 & 26 & 33\\\\29 & 40 & 51\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
       "source": [
         "# Example of multiplying rectangular matrices\n",
         "import sympy as sp\n",
@@ -153,25 +257,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 34,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "GIdLq1-X5rTy",
+        "outputId": "78db567a-e340-443f-d4ed-5b032721e437"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[14, 12],\n",
+              "[26, 28]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}14 & 12\\\\26 & 28\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ],
       "source": [
         "B*A # multiply matrices B and A to get a 2x2 matrix"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 36,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "5f7N-_2b5rTz",
+        "outputId": "ba3476ee-891e-4859-f01d-fe771b7cf780"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[134, 184, 234],\n",
+              "[305, 418, 531]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}134 & 184 & 234\\\\305 & 418 & 531\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
       "source": [
         "B*C # multiply matrices B and C to get a 2x3 matrix"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "5kw2d2dD5rTz"
+      },
       "source": [
         "---\n",
         "## Exercises for Students\n",
@@ -181,6 +329,210 @@
         "2. Calculate the product of matrix $A=\\begin{bmatrix} 4 & 2 \\\\ 12 & 4 \\end{bmatrix}$ and scalar $k=\\frac{1}{4}$.\n",
         "\n",
         "3. Calculate the products $A\\cdot B$ and $B \\cdot A$ for matrices $A=\\begin{bmatrix} 3 & 2 \\\\ 2 & 4 \\end{bmatrix}$ and $B=\\begin{bmatrix} 4 & 1 \\\\ 6 & 4 \\end{bmatrix}$."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "\n",
+        "A=sp.Matrix([[1,2],[3,4]])\n",
+        "B=sp.Matrix([[5,6],[7,8]])\n",
+        "A # display matrix A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "vWgbA42Vbexm",
+        "outputId": "378543fd-5ce6-439f-cb69-65478af73fb3"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[1, 2],\n",
+              "[3, 4]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2\\\\3 & 4\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B # display matrix A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "da2SmwtwfxtP",
+        "outputId": "bcb9c494-d17b-4862-fe5b-78f2bb245432"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[5, 6],\n",
+              "[7, 8]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 6\\\\7 & 8\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sp.Matrix([[6,8],[10,12]])==A+B # verify matrix addition"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-qI_pgmsgEvW",
+        "outputId": "4c56ebc8-6a0c-4516-c415-15e90a0d695e"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=sp.Matrix([[4,2],[12,4]]) # define matrix A\n",
+        "\n",
+        "sp.Matrix([[1,1/2],[3,1]])==1/4*A # verify scalar multiplication"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kc1-3tsrokHK",
+        "outputId": "43eefed8-3116-41be-a7b9-133201dfa10c"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=sp.Matrix([[3,2],[2,4]]) # define matrix A\n",
+        "B=sp.Matrix([[4,1],[6,4]]) # define matrix B\n",
+        "sp.Matrix([[24,11],[32,18]])==A*B # verify matrix multiplication"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "131MmI8mxhHA",
+        "outputId": "ec497f70-d000-49fa-ed7d-946241eaa4c3"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A # display matrix A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "61rBCZ3r3Md0",
+        "outputId": "75582ca9-8a10-4113-cd13-bbe504593831"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[3, 2],\n",
+              "[2, 4]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}3 & 2\\\\2 & 4\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=sp.Matrix([[3,2],[2,4]]) # define matrix A\n",
+        "B=sp.Matrix([[4,1],[6,4]]) # define matrix B\n",
+        "sp.Matrix([[14,12],[26,28]])==B*A # verify matrix multiplication"
+      ],
+      "metadata": {
+        "outputId": "a4ee36de-6516-4865-fe45-508a9a8d46e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e92V_PHS4mdp"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
       ]
     }
   ],
@@ -193,8 +545,11 @@
     "language_info": {
       "name": "python",
       "version": "3.11.9"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
