--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinant_Laplace_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinant_Laplace_en.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "AjiijulRAjuJ"
+      },
       "source": [
         "# Determinants of 3x3 and 4x4 Matrices using Laplace expansion\n",
         "\n",
@@ -24,8 +26,8 @@
         "Expanding along the first row of a 3x3 matrix:\n",
         "\n",
         "$$\n",
-        "\\text{det}(A) = \n",
-        "(-1)^{1+1}a_{11} \\cdot \n",
+        "\\text{det}(A) =\n",
+        "(-1)^{1+1}a_{11} \\cdot\n",
         "\\text{det}\n",
         "\\begin{pmatrix}\n",
         "a_{22} & a_{23} \\\\\n",
@@ -59,7 +61,7 @@
         "Laplace expansion:\n",
         "\n",
         "$$\n",
-        "\\text{det}(A) = 2 \\cdot \n",
+        "\\text{det}(A) = 2 \\cdot\n",
         "\\text{det}\n",
         "\\begin{pmatrix}\n",
         "4 & 5 \\\\\n",
@@ -98,7 +100,7 @@
         "Expanding along the first row of a 4x4 matrix:\n",
         "\n",
         "$$\n",
-        "\\text{det}(B) = \n",
+        "\\text{det}(B) =\n",
         "(-1)^{1+1} \\cdot\n",
         "a_{11} \\cdot \\text{det}\n",
         "\\begin{pmatrix}\n",
@@ -179,24 +181,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": 2,
+      "metadata": {
+        "id": "9lrMI3HMAjuS",
+        "outputId": "71ccc79f-7827-47b9-c765-18af32844ae3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 5\\\\3 & 2 & 1\\end{matrix}\\right]$"
-            ],
             "text/plain": [
               "Matrix([\n",
               "[2, 3, 1],\n",
               "[1, 4, 5],\n",
               "[3, 2, 1]])"
-            ]
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 5\\\\3 & 2 & 1\\end{matrix}\\right]$"
           },
-          "execution_count": 1,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ],
       "source": [
@@ -209,18 +216,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": 3,
+      "metadata": {
+        "id": "rKVbZOFeAjuX",
+        "outputId": "1a65b0d2-b39b-41aa-e98e-adcc8fadc96a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -238,8 +251,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "AIqD-nieAjuY",
+        "outputId": "35da640d-c4e1-4f1e-d13f-d261b1375ca9"
+      },
       "outputs": [
         {
           "data": {
@@ -267,8 +283,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "1leGNGH9AjuZ",
+        "outputId": "ad4c6a78-d93f-4832-9552-2447efc86bad"
+      },
       "outputs": [
         {
           "data": {
@@ -296,7 +315,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "H0SZwTtHAjua"
+      },
       "source": [
         "Note that only the first and third terms have non-zero coefficients, so it is not necessary to calculate the determinants of all minors!\n",
         "\n",
@@ -339,6 +360,270 @@
         "\\end{pmatrix}\n",
         "$$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "\n",
+        "# 3x3 Matrix\n",
+        "A = sp.Matrix([[2,3,1],[1,4,0],[3,2,1]])\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "H-zW0J_ND1jn",
+        "outputId": "c03cb3e8-5205-4588-cae9-f8b4d39eb460",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, 3, 1],\n",
+              "[1, 4, 0],\n",
+              "[3, 2, 1]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 0\\\\3 & 2 & 1\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M11=sp.Matrix([[4,0],[2,1]])\n",
+        "M12=sp.Matrix([[1,0],[3,1]])\n",
+        "M13=sp.Matrix([[1,4],[3,2]])\n",
+        "d=2*M11.det()-3*M12.det()+1*M13.det()\n",
+        "d==A.det()"
+      ],
+      "metadata": {
+        "id": "wb5de6wpGAvK",
+        "outputId": "de60c8f8-3c1a-4237-9fd0-3305fa3a5fc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B=sp.Matrix([[2,3,1],[1,4,0],[3,2,0]])\n",
+        "B"
+      ],
+      "metadata": {
+        "id": "ok4rLtFXIlwC",
+        "outputId": "fc8c48f0-81d1-4b7f-eacb-3128f3891855",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, 3, 1],\n",
+              "[1, 4, 0],\n",
+              "[3, 2, 0]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1\\\\1 & 4 & 0\\\\3 & 2 & 0\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M11=sp.Matrix([[4,0],[2,0]])\n",
+        "M12=sp.Matrix([[1,0],[3,0]])\n",
+        "M13=sp.Matrix([[1,4],[3,2]])\n",
+        "d=2*M11.det()-3*M12.det()+1*M13.det()\n",
+        "d==B.det()"
+      ],
+      "metadata": {
+        "id": "58IcfIGvJ5hu",
+        "outputId": "291e456c-a32a-41aa-c782-ee79f89def20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "C=sp.Matrix([[2,3,1,4],[1,0,0,6],[3,2,1,5],[2,1,4,0]])\n",
+        "C"
+      ],
+      "metadata": {
+        "id": "DKegU3j8LOjw",
+        "outputId": "8421293a-6df8-4497-948b-304818a9a12c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, 3, 1, 4],\n",
+              "[1, 0, 0, 6],\n",
+              "[3, 2, 1, 5],\n",
+              "[2, 1, 4, 0]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1 & 4\\\\1 & 0 & 0 & 6\\\\3 & 2 & 1 & 5\\\\2 & 1 & 4 & 0\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M11=sp.Matrix([[0,0,6],[2,1,5],[1,4,0]])\n",
+        "M12=sp.Matrix([[1,0,6],[3,1,5],[2,4,0]])\n",
+        "M13=sp.Matrix([[1,0,6],[3,2,5],[2,1,0]])\n",
+        "M14=sp.Matrix([[1,0,0],[3,2,1],[2,1,4]])\n",
+        "\n",
+        "(2*M11.det()-3*M12.det()+1*M13.det()-4*M14.det())==C.det()\n",
+        "\n",
+        "d=2*M11.det()-3*M12.det()+1*M13.det()-4*M14.det()\n",
+        "d==C.det()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yGYfmuVRLl6k",
+        "outputId": "c76b3a59-df13-41b1-cb05-6b0dc5fd44ad"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D=sp.Matrix([[2,3,1,4,5],[1,4,0,0,7],[3,0,0,0,0],[2,1,4,3,2],[1,2,3,4,5]])\n",
+        "D"
+      ],
+      "metadata": {
+        "id": "eNYP8fZ_Ref5",
+        "outputId": "3ce49a83-c469-4bc6-c4d4-a1e50b3689bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[2, 3, 1, 4, 5],\n",
+              "[1, 4, 0, 0, 7],\n",
+              "[3, 0, 0, 0, 0],\n",
+              "[2, 1, 4, 3, 2],\n",
+              "[1, 2, 3, 4, 5]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3 & 1 & 4 & 5\\\\1 & 4 & 0 & 0 & 7\\\\3 & 0 & 0 & 0 & 0\\\\2 & 1 & 4 & 3 & 2\\\\1 & 2 & 3 & 4 & 5\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M11=sp.Matrix([[4,0,0,7],[0,0,0,0],[1,4,3,2],[2,3,4,5]])\n",
+        "M12=sp.Matrix([[1,0,0,7],[3,0,0,0],[2,4,3,2],[1,3,4,5]])\n",
+        "M13=sp.Matrix([[1,4,0,7],[3,0,0,0],[2,1,3,2],[1,2,4,5]])\n",
+        "M14=sp.Matrix([[1,4,0,7],[3,0,0,0],[2,1,4,2],[1,2,3,5]])\n",
+        "M15=sp.Matrix([[1,4,0,0],[3,0,0,0],[2,1,4,3],[1,2,3,4]])\n",
+        "\n",
+        "(2*M11.det()-3*M12.det()+1*M13.det()-4*M14.det()+5*M15.det())==D.det()\n",
+        "\n",
+        "d=2*M11.det()-3*M12.det()+1*M13.det()-4*M14.det()+5*M15.det()\n",
+        "\n",
+        "d==D.det()"
+      ],
+      "metadata": {
+        "id": "GUtdC1aEScws",
+        "outputId": "f17463cd-eed4-49f6-c453-a05fdd30cf1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     }
   ],
   "metadata": {
@@ -358,8 +643,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
