--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_inversion_by_formula_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_inversion_by_formula_en.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0d_TIq6aYElc",
         "outputId": "dd7a3831-0df5-40ba-e2d3-787845671548",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "i5j82A61YElh",
         "outputId": "ee002765-3b2d-4987-e903-ab7275c78dd9",
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "CuJwF2z1YEli",
         "outputId": "b5823cea-a147-4b47-d633-6ce7fc84d9e6",
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "luVLts7CYElk",
         "outputId": "52a9ee7c-84b1-4417-9736-60b578122467",
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Zf9RoIr3YElm",
         "outputId": "0c33db3d-a25e-4dc5-b611-73e9f671c887",
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "QXP4HliSYElo",
         "outputId": "c9e0418e-5d1c-4196-f5c4-b1a527116b40",
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "AerhEUGaYElq",
         "outputId": "44fb4df7-17da-46bf-a141-539a5dbc9341",
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "uj4kmOnBYEls",
         "outputId": "a23f7f1e-569b-4d62-a347-9682a06d5418",
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "AjaqQ1VbYElt",
         "outputId": "d6b75c22-1ae3-4a76-9d2d-73033ac67d47",
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "YjS909bXYElv",
         "outputId": "45c35725-c14f-4ada-c7bf-80cd534bbe55",
@@ -492,7 +492,7 @@
           "height": 78
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +524,7 @@
           "height": 78
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
           "height": 78
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
           "height": 78
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,30 +608,26 @@
     {
       "cell_type": "code",
       "source": [
-        "M11=sp.Matrix([[6,3],[9,1]])\n",
-        "M12=sp.Matrix([[-1,3],[2,1]])\n",
-        "M13=sp.Matrix([[-1,6],[2,9]])\n",
-        "\n",
-        "d==G.det()"
+        "G.rank()"
       ],
       "metadata": {
         "id": "jzVZbaqrPFr3",
-        "outputId": "e40bd024-fd73-4a85-ffe0-c1dd1e9f773e",
+        "outputId": "5d6a028a-2987-4507-a17d-f1cbde8b5b56",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "3"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     }
