--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_inversion_by_formula_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_inversion_by_formula_en.ipynb
@@ -15,10 +15,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "0d_TIq6aYElc",
-        "outputId": "dd7a3831-0df5-40ba-e2d3-787845671548",
+        "outputId": "c49c49ed-a5ac-4df6-8f45-9759ba74766e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 78
@@ -37,7 +37,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 1 & 2\\\\5 & 3 & 1\\\\1 & 1 & 5\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -581,13 +581,13 @@
       ],
       "metadata": {
         "id": "E4z6NoYLO1j8",
-        "outputId": "9dac8c51-4e4f-4d75-b547-dee11213668c",
+        "outputId": "53767505-e274-49e5-90d4-fa2c646394d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 78
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +601,35 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}4 & -3 & 7\\\\-1 & 6 & 3\\\\2 & 9 & 1\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "G.det() # The rank is 3"
+      ],
+      "metadata": {
+        "id": "jzVZbaqrPFr3",
+        "outputId": "d55869d8-a4c2-49cd-ade8-9323cce62ffd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-252"
+            ],
+            "text/latex": "$\\displaystyle -252$"
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
@@ -611,13 +639,13 @@
         "G.rank()"
       ],
       "metadata": {
-        "id": "jzVZbaqrPFr3",
-        "outputId": "5d6a028a-2987-4507-a17d-f1cbde8b5b56",
+        "id": "Q1X2K83VHcFA",
+        "outputId": "700e55b7-5b68-40eb-c8b2-ee5b5b57a4f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +655,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 6
         }
       ]
     }
