--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_basic_operations_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_basic_operations_en.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -346,9 +346,9 @@
           "height": 58
         },
         "id": "vWgbA42Vbexm",
-        "outputId": "378543fd-5ce6-439f-cb69-65478af73fb3"
+        "outputId": "9f0c5484-35d5-4994-9741-51480c3ba943"
       },
-      "execution_count": 27,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +361,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 2\\\\3 & 4\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 8
         }
       ]
     },
@@ -376,9 +376,9 @@
           "height": 58
         },
         "id": "da2SmwtwfxtP",
-        "outputId": "bcb9c494-d17b-4862-fe5b-78f2bb245432"
+        "outputId": "58950d16-8df8-4cd3-fd65-9914251de00f"
       },
-      "execution_count": 28,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}5 & 6\\\\7 & 8\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 9
         }
       ]
     },
@@ -405,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-qI_pgmsgEvW",
-        "outputId": "4c56ebc8-6a0c-4516-c415-15e90a0d695e"
+        "outputId": "92f1ae99-adad-4e6c-dc0d-5d3fefff5743"
       },
-      "execution_count": 29,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 10
         }
       ]
     },
@@ -426,44 +426,16 @@
       "source": [
         "A=sp.Matrix([[4,2],[12,4]]) # define matrix A\n",
         "\n",
-        "sp.Matrix([[1,1/2],[3,1]])==1/4*A # verify scalar multiplication"
+        "sp.Matrix([[1,sp.Rational(1,2)],[3,1]])==sp.Rational(1,4)*A # verify scalar multiplication"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kc1-3tsrokHK",
-        "outputId": "43eefed8-3116-41be-a7b9-133201dfa10c"
+        "outputId": "657d4fa5-522f-4ec9-f2de-bd36cd08e1dc"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "A=sp.Matrix([[3,2],[2,4]]) # define matrix A\n",
-        "B=sp.Matrix([[4,1],[6,4]]) # define matrix B\n",
-        "sp.Matrix([[24,11],[32,18]])==A*B # verify matrix multiplication"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "131MmI8mxhHA",
-        "outputId": "ec497f70-d000-49fa-ed7d-946241eaa4c3"
-      },
-      "execution_count": 32,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +445,41 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=sp.Matrix([[3,2],\n",
+        "             [2,4]]) # define matrix A\n",
+        "B=sp.Matrix([[4,1],\n",
+        "             [6,4]]) # define matrix B\n",
+        "C11=4*3+6*2\n",
+        "C12=3*1+2*4\n",
+        "C21=2*4+4*6\n",
+        "C22=2*1+4*4\n",
+        "sp.Matrix([[C11,C12],[C21,C22]])==A*B # verify matrix multiplication"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "131MmI8mxhHA",
+        "outputId": "3f812657-c5cf-43b2-c71c-3a133d30fe68"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -490,7 +496,7 @@
         "id": "61rBCZ3r3Md0",
         "outputId": "75582ca9-8a10-4113-cd13-bbe504593831"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,7 +527,7 @@
         },
         "id": "e92V_PHS4mdp"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
