--- a/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinants_2x2_3x3_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/01_Matrices/LA_Matrix_determinants_2x2_3x3_en.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-bQ3Kxq4b7VK",
         "outputId": "1a3df7e4-6ee4-4b9a-eb14-ba9480466350",
@@ -85,7 +85,8 @@
         "import sympy as sp\n",
         "\n",
         "# Define the matrix\n",
-        "A = sp.Matrix([[2, 3], [1, 4]])\n",
+        "A = sp.Matrix([[2, 3],\n",
+        "               [1, 4]])\n",
         "A # display the matrix"
       ]
     },
@@ -118,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "vQw_DZnOb7VM",
         "outputId": "3f5e3056-2678-4c05-8b94-1e225f3b9bcd",
@@ -151,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "laRFDJrYb7VM",
         "outputId": "98f991f9-f207-4493-b94f-d11a34596b5c",
@@ -251,7 +252,7 @@
           "height": 58
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +309,7 @@
           "height": 58
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +366,7 @@
           "height": 58
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +395,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +423,7 @@
           "height": 78
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +444,7 @@
     {
       "cell_type": "code",
       "source": [
-        "(1*3*-2 + 0*1*2 + 2*-1*4 - 2*3*2 - 0*-1*-2 - 1*1*4)==D.det()"
+        "(1*3*(-2) + 0*1*2 + 2*(-1)*4 - 2*3*2 - 0*(-1)*(-2) - 1*1*4)==D.det()"
       ],
       "metadata": {
         "id": "MH6iB1LKSzz5",
@@ -452,7 +453,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +481,7 @@
           "height": 78
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +502,7 @@
     {
       "cell_type": "code",
       "source": [
-        "(3*2*2 + 1*4*5 + -1*0*3 - -1*2*5 - 1*0*2 - 3*4*3)==E.det()"
+        "(3*2*2 + 1*4*5 + (-1)*0*3 - (-1)*2*5 - 1*0*2 - 3*4*3)==E.det()"
       ],
       "metadata": {
         "id": "-PMhG8_sWNnd",
@@ -510,7 +511,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +539,7 @@
           "height": 78
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +560,7 @@
     {
       "cell_type": "code",
       "source": [
-        "(2*4*3 + -3*-2*1 + 1*1*5 - 1*4*1 - -3*1*3 - 2*-2*5)==F.det()"
+        "(2*4*3 + (-3)*(-2)*1 + 1*1*5 - 1*4*1 - (-3)*1*3 - 2*(-2)*5)==F.det()"
       ],
       "metadata": {
         "id": "gciZq_sGXRfe",
@@ -568,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
