--- a/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
@@ -15,10 +15,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 57,
       "metadata": {
         "id": "1IRfisGRaXSw",
-        "outputId": "8c3d33af-9b79-4eb0-d0a4-ae1c93573766",
+        "outputId": "bafebd12-c3a4-4ace-80fe-0c8737c1adf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "6qWBRHnvaXS4"
       },
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "G04-aLARaXS5",
         "outputId": "98548733-04ab-4fa4-e230-13ea0257e3e3",
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "cdVU0_Y2aXS6",
         "outputId": "1853c978-366e-4fe0-9116-bf782b8fa627",
@@ -445,24 +445,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "zFk1tarCaXS6",
-        "outputId": "0dd8d277-7053-44ff-a18c-fd50d0631380"
+        "outputId": "cc848838-45be-487a-c5cd-af741dbb6e57",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/latex": [
-              "$\\displaystyle - \\frac{22}{3}$"
-            ],
             "text/plain": [
               "-22/3"
-            ]
+            ],
+            "text/latex": "$\\displaystyle - \\frac{22}{3}$"
           },
-          "execution_count": 16,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 46
         }
       ],
       "source": [
@@ -510,7 +512,7 @@
           "height": 152
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -557,7 +559,7 @@
           "height": 152
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -604,7 +606,7 @@
           "height": 152
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -651,7 +653,7 @@
           "height": 152
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -698,7 +700,7 @@
           "height": 152
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -745,7 +747,7 @@
           "height": 152
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -782,10 +784,506 @@
     {
       "cell_type": "code",
       "source": [
-        "p.add_row()"
+        "p.add_row(3,1,-2)"
       ],
       "metadata": {
-        "id": "9xXGQHHqwIUT"
+        "id": "9xXGQHHqwIUT",
+        "outputId": "7b63e20b-fb1d-43c2-b99a-a1a525416aea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 152
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + -2*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 2 y - 2 z = 4 \\\\ 0 x - 3 y + 5 z = -8 \\\\ 0 x - 4 y + 7 z = -11 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.multiply_row(3,3/4)"
+      ],
+      "metadata": {
+        "id": "BR7RQrDy2xWe",
+        "outputId": "898c0c58-7c4f-43f2-bb4a-964a7443f079",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 152
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = 0.75*r3"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 2 y - 2 z = 4 \\\\ 0 x - 3 y + 5 z = -8 \\\\ 0 x - 3.0 y + 5.25 z = -8.25 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.add_row(3,2,-1)"
+      ],
+      "metadata": {
+        "id": "7cwki58O3KIK",
+        "outputId": "f8607a27-4fe0-4f46-a98e-0e29bb988f71",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 152
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + -1*r2"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 2 y - 2 z = 4 \\\\ 0 x - 3 y + 5 z = -8 \\\\ 0 x +0 y + 0.25 z = -0.25 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x,y,z=symbols('x y z')\n",
+        "eq1=Eq(1*x+2*y-2*z,4)\n",
+        "eq2=Eq(-3*y+5*z,-8)\n",
+        "eq3=Eq(sp.Rational(0,25)*z,sp.Rational(-0,25))"
+      ],
+      "metadata": {
+        "id": "L2eU5AzS3TWt"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sol_z=sp.solve(eq3,z)[0]"
+      ],
+      "metadata": {
+        "id": "tdFq04Ky7-BN",
+        "outputId": "a9129602-e402-4023-d319-d3449448ad71",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "list index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-58-9939239f6e99>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msol_z\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meq3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sol_z"
+      ],
+      "metadata": {
+        "id": "2Hn6mfNMSC3N",
+        "outputId": "27b40cbe-0796-44fb-c186-8114628be3fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g=SymbolicMatrix([[1,1,1,-1],[2,1,1,0],[-1,0,1,-1],[3,2,-1,2]], column_labels=[\"x\",\"y\",\"z\",\"t\"], free_terms=[2,3,0,-1], display_mode='equations')"
+      ],
+      "metadata": {
+        "id": "xxKiklvrUklH",
+        "outputId": "cf0171a8-b33b-40a8-8f8f-fbbac47a04d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Initial equations:**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ 3 x + 2 y - 1 z + 2 t = -1 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(4,2,-2)"
+      ],
+      "metadata": {
+        "id": "2o18WkAOVnA1",
+        "outputId": "08339bc0-c987-4872-df0a-a5454739a122",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r4 = r4 + -2*r2"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ - 1 x +0 y - 3 z + 2 t = -7 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(4,3,-1)"
+      ],
+      "metadata": {
+        "id": "wnHUYghNV467",
+        "outputId": "6cd1fd8d-d8f3-4b66-9bce-472bc151548d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r4 = r4 + -1*r3"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ - 1 x +0 y + 1 z - 1 t = 0 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(3,2,1)"
+      ],
+      "metadata": {
+        "id": "aTqxfhiEWCTf",
+        "outputId": "141a1159-75f7-4651-9b93-49daf88b12bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + 1*r2"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 1 x + 1 y + 2 z - 1 t = 3 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(3,1,-1)"
+      ],
+      "metadata": {
+        "id": "jyVP97sIWJhf",
+        "outputId": "821ea6a7-5cfd-4045-b71f-e565f18b7726",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r3 = r3 + -1*r1"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y - 4 z + 3 t = -7 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g.add_row(4,3,4)"
+      ],
+      "metadata": {
+        "id": "1yRW3Q5gWU2h",
+        "outputId": "a629b031-8d51-4d02-db64-aa760385169e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Operation:** r4 = r4 + 4*r3"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y + 1 z - 1 t = 2 \\\\ 2 x + 1 y + 1 z +0 t = 3 \\\\ 0 x +0 y + 1 z +0 t = 1 \\\\ 0 x +0 y +0 z + 3 t = -3 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x,y,z,t=symbols('x y z t')\n",
+        "\n",
+        "eq1=(1*x+1*y+1*z-1*t,2)\n",
+        "eq2=(2*x+1*y+1*z,3)\n",
+        "eq3=(1*z,1)\n",
+        "eq4=(3*t,-3)\n"
+      ],
+      "metadata": {
+        "id": "830WKPGnW7Im"
       },
       "execution_count": null,
       "outputs": []
